--- a/a11-euler.tex
+++ b/a11-euler.tex
@@ -41,7 +41,7 @@ $\sin^2 \theta + \cos^2 \theta = \dfrac{a^2}{c^2} + \dfrac{b^2}{c^2} = \dfrac{a^
 \end{enumerate}
 \end{proof}
 
-\subsection{Imaginary Number}
+\subsection{Imaginary Number}n
 \label{subsec:imaginary}
 
 
@@ -50,7 +50,7 @@ $\sin^2 \theta + \cos^2 \theta = \dfrac{a^2}{c^2} + \dfrac{b^2}{c^2} = \dfrac{a^
 \begin{itemize}
 
 \item \boldmath{$i$} is defined to be an imaginary number that has the property: $i^2 =-1$
-\item \textbf{Complex Number} is a number that involves imaginary number(s) (e.g., $a = 5.6 + i\cdot4.3)$
+\item \textbf{Complex Number} is a number of the form $a + b\,i$, where $a$ and $b$ are real numbers (e.g., $a = 5.6 + 4.3i)$
 
 \item \textbf{Real Number} is a number that does not involve any imaginary number (e.g., $a = 13.4$)
 
@@ -58,7 +58,7 @@ $\sin^2 \theta + \cos^2 \theta = \dfrac{a^2}{c^2} + \dfrac{b^2}{c^2} = \dfrac{a^
 
 (e.g., $a = 3 + i\cdot3.4$, \text{ } $\overline{a} = 3 - i\cdot3.4$)
 
-\item \textbf{Hermitian Vector} is a vector where the 1st half of its elements is a conjugate of the 2nd half, as the $n$-dimensional vector illustrated below:
+\item \textbf{Hermitian Vector} is a vector where the 2nd half of its elements is the complex conjugate of the 1st half in reverse order, as illustrated by the $n$-dimensional vector below:
 
 $\vec{v} = (v_1, v_2, v_3, \cdots, v_{\frac{n}{2}-1}, v_{\frac{n}{2}}, \overline{v}_{\frac{n}{2}}, \overline{v}_{\frac{n}{2} - 1}, \cdots, \overline{v}_3, \overline{v}_2, \overline{v}_1)$
 
@@ -83,10 +83,10 @@ $e^{i\theta} = \cos\theta + i\cdot\sin\theta$
 \begin{figure}[!h]
     \centering
   \includegraphics[width=0.4\linewidth]{figures/euler-formula.png}
-  \caption{The figure illustrates a circle of Euler's formula in the complex plane \href{https://en.wikipedia.org/wiki/Euler's_formula}{(Source)}}
+  \caption{The figure illustrates Euler's formula on the unit circle in the complex plane \href{https://en.wikipedia.org/wiki/Euler's_formula}{(Source)}}
 \end{figure}
 
-The value of $e^{i\theta}$ is represented as a coordinate on a circle in the complex plane in \autoref{fig:complex-plane}, where the $x$-axis encodes the value's real number part and the $y$-axis encodes the value's imaginary number part. Note that as $\theta$ increases, the complex part oscillates between $i$ and $-i$, and the real part oscillates between $1$ and $-1$, with the period of $2\pi$. 
+The value of $e^{i\theta}$ is represented as a coordinate on a circle in the complex plane in \autoref{fig:complex-plane}, where the $x$-axis encodes the value's real number part and the $y$-axis encodes the value's imaginary number part. Note that as $\theta$ increases, the imaginary part ($\sin\theta$) oscillates between $1$ and $-1$ (reaching $i$ and $-i$ on the imaginary axis), and the real part ($\cos\theta$) oscillates between $1$ and $-1$, with period $2\pi$.
 
 
 \subsection{Vandermonde Matrix with Roots of Cyclotomic Polynomial over Complex Numbers}
