--- a/a13-chinese-remainder.tex
+++ b/a13-chinese-remainder.tex
@@ -8,7 +8,7 @@
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{sec:chinese-remainder}.1} Chinese Remainder Theorem}}]
 
-Suppose we have positive coprime integers $n_0, n_1, n_2, \cdots, n_k$. Let $N = n_0 n_1 \cdots n_k$. We sample $k + 1$ random integers $a_0, a_1, a_2, \cdots, a_k$ from each modulo domain $n_0, n_1, n_2, \dots, n_k$ (i.e., $a_0 \in \mathbb{Z}_{n_0}$, $a_1 \in \mathbb{Z}_{n_1}$, $\cdots$, $a_k \in \mathbb{Z}_{n_k}$). Then, there exists one and only one solution $x \bmod N$ such that $x$ is congruent with $a_0, a_1, a_2, \cdots, a_k$ in each modulo $n_0, n_1, n_2, \cdots, n_k$. That is: 
+Suppose we have positive coprime integers $n_0, n_1, n_2, \cdots, n_k$. Let $N = n_0 n_1 \cdots n_k$. We sample $k + 1$ random integers $a_0, a_1, a_2, \cdots, a_k$ from each modulus $n_0, n_1, n_2, \dots, n_k$ (i.e., $a_0 \in \mathbb{Z}_{n_0}$, $a_1 \in \mathbb{Z}_{n_1}$, $\cdots$, $a_k \in \mathbb{Z}_{n_k}$). Then, there exists one and only one solution $x \bmod N$ such that $x \equiv a_i \pmod{n_i}$ for each $0 \le i \le k$. That is: 
 
 \text{ } $x \equiv a_0 \bmod n_0$
 
@@ -48,13 +48,13 @@ $ $
 \begin{enumerate}
 \item Given $x = \sum\limits_{i=0}^k a_i y_i z_i$, let's compute $x \bmod n_i$ for each $i$ where $0 \leq i \leq k$: 
 
-$x \text{ } \text{mod } n_i = \sum\limits_{i=0}^k a_i y_i z_i \text{ } \text{mod } n_i$
+$x \bmod n_i = \sum\limits_{j=0}^k a_j y_j z_j \bmod n_i$
 
-$= a_0 y_0 z_0 + a_1 y_1 z_1 + a_2 y_2 z_2 + \cdots + a_k y_k z_k \text{ } \text{mod } n_i$
+$= a_0 y_0 z_0 + a_1 y_1 z_1 + a_2 y_2 z_2 + \cdots + a_k y_k z_k \bmod n_i$
 
-$= a_i y_i z_i \text{ } \text{mod } n_i$ \textcolor{red}{ \# because $y_j \equiv 0 \bmod n_i$ for all $j \neq i$, as they are a multiple of $n_i$}
+$= a_i y_i z_i \bmod n_i$ \textcolor{red}{ \# because $y_j \equiv 0 \bmod n_i$ for all $j \neq i$, as they are a multiple of $n_i$}
 
-$= a_i$ \textcolor{red}{ \# because $y_i z_i = y_i y_i^{-1} = 1$}
+$= a_i$ \textcolor{red}{ \# because $y_i z_i \equiv y_i y_i^{-1} \equiv 1 \bmod n_i$}
 
 $ $
 
@@ -65,17 +65,17 @@ $ $
 
 Alternatively, note that the following is also true:
 
-$x \text{ } \text{mod } n_i = \sum\limits_{i=0}^k |a_i z_i|_{n_i} y_i \text{ } (\text{mod } n_i)$
+$x \bmod n_i = \sum\limits_{j=0}^k |a_j z_j|_{n_j} y_i \text{ } (\bmod n_i)$
 
-$= |a_0 z_0|_{n_0} y_0 + |a_1 z_1|_{n_1} y_1 + |a_2 z_2|_{n_2} y_2 + \cdots + |a_k z_k|_{n_k} y_k \text{ } \text{mod } n_i$
+$= |a_0 z_0|_{n_0} y_0 + |a_1 z_1|_{n_1} y_1 + |a_2 z_2|_{n_2} y_2 + \cdots + |a_k z_k|_{n_k} y_k \bmod n_i$
 
-$= |a_i z_i|_{n_i} y_i \text{ } \text{mod } n_i$ 
+$= |a_i z_i|_{n_i} y_i \bmod n_i$ 
 
 $= a_i$ 
 
 $ $
 
-\item Now, we prove that $x$ is a unique solution in modulo $N$. Suppose there were two solutions: $x$ and $x'$ such that:
+\item Now, we prove that $x$ is a unique solution modulo $N$. Suppose there were two solutions: $x$ and $x'$ such that:
 
 $x \equiv x' \equiv a_0 \bmod n_0$
 
@@ -121,7 +121,7 @@ Then, we do the similar reasoning as step 2: since every co-prime $n_j$ divides 
 \subsection{Application: Residue Number System (RNS)} 
 \label{subsec:crt-application}
 
-In a modern processor, each data size is a maximum of 64 bits. If the data size exceeds 64 bits, its computations can be handled efficiently by using the Chinese remainder theorem such that each co-prime modulus $\log_2n_i \leq 64$ (where $N = n_0\cdot n_1\cdots\cdot n_k$) can be used to represent a big value $a \bmod N$ as $\vec{a}_{\mathit{crt}} = (a_0, a_1, \cdots , a_k)$, where $a \equiv a_i \bmod n_i$. Then, for any pair of big numbers $a$ and $b \bmod N$, we can compute $a + b \bmod N$ and $a \cdot b \bmod N$ as follows: 
+In a modern processor, each data size is a maximum of 64 bits. If the data size exceeds 64 bits, its computations can be handled efficiently by using the Chinese remainder theorem, ensuring that each co-prime modulus $n_i$ satisfies $\log_2n_i \leq 64$ (where $N = n_0\cdot n_1\cdots\cdot n_k$), so that we can represent a large value $a \bmod N$ as $\vec{a}_{\mathit{crt}} = (a_0, a_1, \cdots , a_k)$, where $a \equiv a_i \bmod n_i$. Then, for any pair of big numbers $a$ and $b \bmod N$, we can compute $a + b \bmod N$ and $a \cdot b \bmod N$ as follows: 
 
 \begin{itemize}
 \item $a + b \equiv \sum\limits_{i=0}^k a_i y_i z_i + \sum\limits_{i=0}^k b_i y_i z_i \equiv \sum\limits_{i=0}^k (a_i y_i z_i + b_i y_i z_i) \equiv \sum\limits_{i=0}^k (a_i + b_i) y_i z_i \bmod N $
@@ -149,7 +149,7 @@ Thus, the Chinese remainder theorem gives us the following useful formula:
 
 \begin{tcolorbox}[title={\textbf{\tboxtheorem{\ref*{sec:chinese-remainder}.2} Application of the Chinese Remainder Theorem}}]
 
-Suppose there are two big numbers $a = \sum\limits_{i=0}^k a_i y_i z_i \bmod N$ and $b = \sum\limits_{i=0}^k b_i y_i z_i \bmod N$  where $N$ is a multiplication of co-primes $n_1n_2\cdots n_k$, we have an isomorphism as follows:
+Suppose there are two big numbers $a = \sum\limits_{i=0}^k a_i y_i z_i \bmod N$ and $b = \sum\limits_{i=0}^k b_i y_i z_i \bmod N$  where $N$ is a the product of co-prime moduli $n_0 \cdot n_1 \cdots n_k$, we have an isomorphism as follows:
 
 $a \xrightarrow{\sigma} \vec{a}_{\mathit{crt}} = (a_0, a_1, \cdots, a_k)$
 
